Add custom fallback method for GET courses route in gateway server